// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VConfirm.ts not render a close icon in header when default 1`] = `
<transition-stub name="transition" appear="true">
  <div class="v-confirm light">
    <div class="v-confirm__content" style="width: 800px;">
      <div class="v-confirm__header" style="background-color: inherit;">
        <header style="background-color: transparent;"></header>
      </div>
      <div class="v-confirm__message"></div>
    </div>
  </div>
</transition-stub>
`;

exports[`VConfirm.ts not render a divider when noActionsDivider is true 1`] = `
<transition-stub name="transition" appear="true">
  <div class="v-confirm light">
    <div class="v-confirm__content" style="width: 800px;">
      <div class="v-confirm__header" style="background-color: inherit;">
        <header style="background-color: transparent;"></header>
      </div>
      <div class="v-confirm__message"></div>
      <div class="v-confirm__actions" style="justify-content: end;"><button type="button" class="button"><span>test</span></button></div>
    </div>
  </div>
</transition-stub>
`;

exports[`VConfirm.ts not render a header when hideHeader is true 1`] = `
<transition-stub name="transition" appear="true">
  <div class="v-confirm light">
    <div class="v-confirm__content" style="width: 800px;">
      <div class="v-confirm__message"></div>
    </div>
  </div>
</transition-stub>
`;

exports[`VConfirm.ts render a close icon when closeable is true 1`] = `
<transition-stub name="transition" appear="true">
  <div class="v-confirm light">
    <div class="v-confirm__content" style="width: 800px;">
      <div class="v-confirm__header" style="background-color: inherit;">
        <header style="background-color: transparent;"></header>
        <div class="v-confirm__spacer"></div>
        <div class="v-confirm__close-icon"><button type="button" class="mdi-icon light" style="width: 24px; height: 36px;"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" role="img" area-hidden="true" style="font-size: 24px; width: 24px; height: 24px; fill: currentColor; vertical-align: middle;">
              <path d="M19,6.41L17.59,5L12,10.59L6.41,5L5,6.41L10.59,12L5,17.59L6.41,19L12,13.41L17.59,19L19,17.59L13.41,12L19,6.41Z"></path>
            </svg></button></div>
      </div>
      <div class="v-confirm__message"></div>
    </div>
  </div>
</transition-stub>
`;

exports[`VConfirm.ts render a dark component 1`] = `
<transition-stub name="transition" appear="true">
  <div class="v-confirm dark">
    <div class="v-confirm__content" style="width: 800px;">
      <div class="v-confirm__header" style="background-color: inherit;">
        <header style="background-color: transparent;"></header>
      </div>
      <div class="v-confirm__message"></div>
    </div>
  </div>
</transition-stub>
`;

exports[`VConfirm.ts render a divider and actions when set the btns props 1`] = `
<transition-stub name="transition" appear="true">
  <div class="v-confirm light">
    <div class="v-confirm__content" style="width: 800px;">
      <div class="v-confirm__header" style="background-color: inherit;">
        <header style="background-color: transparent;"></header>
      </div>
      <div class="v-confirm__message"></div>
      <hr role="separator" area-orientation="horizontal" class="divider light" style="margin: 0px;">
      <div class="v-confirm__actions" style="justify-content: end;"><button type="button" class="button"><span>test</span></button></div>
    </div>
  </div>
</transition-stub>
`;

exports[`VConfirm.ts render a message text 1`] = `
<transition-stub name="transition" appear="true">
  <div class="v-confirm light">
    <div class="v-confirm__content" style="width: 800px;">
      <div class="v-confirm__header" style="background-color: inherit;">
        <header style="background-color: transparent;"></header>
      </div>
      <div class="v-confirm__message">message</div>
    </div>
  </div>
</transition-stub>
`;

exports[`VConfirm.ts render a title text and background-color is inherit 1`] = `
<transition-stub name="transition" appear="true">
  <div class="v-confirm light">
    <div class="v-confirm__content" style="width: 800px;">
      <div class="v-confirm__header" style="background-color: inherit;">
        <header style="background-color: transparent;">title</header>
      </div>
      <div class="v-confirm__message"></div>
    </div>
  </div>
</transition-stub>
`;

exports[`VConfirm.ts render a title with custom background-color 1`] = `
<transition-stub name="transition" appear="true">
  <div class="v-confirm light">
    <div class="v-confirm__content" style="width: 800px;">
      <div class="v-confirm__header" style="background-color: rgb(255, 255, 255);">
        <header style="background-color: transparent;">title</header>
      </div>
      <div class="v-confirm__message"></div>
    </div>
  </div>
</transition-stub>
`;

exports[`VConfirm.ts render a title with custom text-color 1`] = `
<transition-stub name="transition" appear="true">
  <div class="v-confirm light">
    <div class="v-confirm__content" style="width: 800px;">
      <div class="v-confirm__header" style="background-color: inherit;">
        <header style="background-color: transparent; color: rgb(255, 255, 255);">title</header>
      </div>
      <div class="v-confirm__message"></div>
    </div>
  </div>
</transition-stub>
`;

exports[`VConfirm.ts render dark divider 1`] = `
<transition-stub name="transition" appear="true">
  <div class="v-confirm dark">
    <div class="v-confirm__content" style="width: 800px;">
      <div class="v-confirm__header" style="background-color: inherit;">
        <header style="background-color: transparent;"></header>
      </div>
      <div class="v-confirm__message"></div>
      <hr role="separator" area-orientation="horizontal" class="divider dark" style="margin: 0px;">
      <div class="v-confirm__actions" style="justify-content: end;"><button type="button" class="button"><span>test</span></button></div>
    </div>
  </div>
</transition-stub>
`;

exports[`VConfirm.ts render the action buttons 1`] = `
<transition-stub name="transition" appear="true">
  <div class="v-confirm light">
    <div class="v-confirm__content" style="width: 800px;">
      <div class="v-confirm__header" style="background-color: inherit;">
        <header style="background-color: transparent;"></header>
      </div>
      <div class="v-confirm__message"></div>
      <hr role="separator" area-orientation="horizontal" class="divider light" style="margin: 0px;">
      <div class="v-confirm__actions" style="justify-content: end;"><button type="button" class="button"><span>test</span></button></div>
    </div>
  </div>
</transition-stub>
`;

exports[`VConfirm.ts render the action buttons with class style background-color 1`] = `
<transition-stub name="transition" appear="true">
  <div class="v-confirm light">
    <div class="v-confirm__content" style="width: 800px;">
      <div class="v-confirm__header" style="background-color: inherit;">
        <header style="background-color: transparent;"></header>
      </div>
      <div class="v-confirm__message"></div>
      <hr role="separator" area-orientation="horizontal" class="divider light" style="margin: 0px;">
      <div class="v-confirm__actions" style="justify-content: end;"><button type="button" class="button white"><span>test</span></button></div>
    </div>
  </div>
</transition-stub>
`;

exports[`VConfirm.ts render the action buttons with class style text color 1`] = `
<transition-stub name="transition" appear="true">
  <div class="v-confirm light">
    <div class="v-confirm__content" style="width: 800px;">
      <div class="v-confirm__header" style="background-color: inherit;">
        <header style="background-color: transparent;"></header>
      </div>
      <div class="v-confirm__message"></div>
      <hr role="separator" area-orientation="horizontal" class="divider light" style="margin: 0px;">
      <div class="v-confirm__actions" style="justify-content: end;"><button type="button" class="button white--text"><span>test</span></button></div>
    </div>
  </div>
</transition-stub>
`;

exports[`VConfirm.ts render the action buttons with css style background-color 1`] = `
<transition-stub name="transition" appear="true">
  <div class="v-confirm light">
    <div class="v-confirm__content" style="width: 800px;">
      <div class="v-confirm__header" style="background-color: inherit;">
        <header style="background-color: transparent;"></header>
      </div>
      <div class="v-confirm__message"></div>
      <hr role="separator" area-orientation="horizontal" class="divider light" style="margin: 0px;">
      <div class="v-confirm__actions" style="justify-content: end;"><button type="button" class="button" style="background-color: rgb(255, 255, 255);"><span>test</span></button></div>
    </div>
  </div>
</transition-stub>
`;

exports[`VConfirm.ts render the action buttons with css style text color 1`] = `
<transition-stub name="transition" appear="true">
  <div class="v-confirm light">
    <div class="v-confirm__content" style="width: 800px;">
      <div class="v-confirm__header" style="background-color: inherit;">
        <header style="background-color: transparent;"></header>
      </div>
      <div class="v-confirm__message"></div>
      <hr role="separator" area-orientation="horizontal" class="divider light" style="margin: 0px;">
      <div class="v-confirm__actions" style="justify-content: end;"><button type="button" class="button" style="color: rgb(255, 255, 255);"><span>test</span></button></div>
    </div>
  </div>
</transition-stub>
`;

exports[`VConfirm.ts render when not active 1`] = `
<transition-stub name="transition" appear="true">
  <div class="v-confirm light" style="display: none;">
    <div class="v-confirm__content" style="width: 800px;">
      <div class="v-confirm__header" style="background-color: inherit;">
        <header style="background-color: transparent;"></header>
      </div>
      <div class="v-confirm__message"></div>
    </div>
  </div>
</transition-stub>
`;
